🎨 fix editor header not covering scrolled content (#769)
no issue
- background color of the editor header at smaller screen sizes had been removed resulting in the editor content showing through when scrolling, this adds the explicit bg color back for both normal and dark mode

--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -170,6 +170,7 @@
     height: 43px;
     padding: 0;
     padding-left: 15px;
+    background-color: #fff;
     border-bottom: var(--lightgrey) 1px solid;
     z-index: 100;
 }
